# xy-book

./: .gitignore  docker-compose.yml  start.sh
services/xybook-agents/: Dockerfile  alembic.ini  pyproject.toml
services/xybook-agents/alembic/: env.py
services/xybook-agents/alembic/versions/: fcdf0bf56ccd_initial.py
services/xybook-agents/src/xybook_agents/: config.py  main.py
services/xybook-agents/src/xybook_agents/api/: router.py
services/xybook-agents/src/xybook_agents/models/: __init__.py  agent.py
services/xybook-agents/src/xybook_agents/personas/: __init__.py  templates.py  variant_pools.py  variants.py
services/xybook-agents/src/xybook_agents/scheduler/: agent_scheduler.py
services/xybook-agents/src/xybook_agents/schemas/: agent.py
services/xybook-agents/src/xybook_agents/worker/: agent_loop.py  content.py  decisions.py  scheduler_runner.py
services/xybook-agents/tests/: test_app.py  test_content.py  test_decisions.py  test_personas.py  test_scheduler.py
services/xybook-common/: pyproject.toml
services/xybook-common/src/xybook_common/: config.py  enums.py  exceptions.py  llm.py  minio_client.py  persona.py  redis_client.py
services/xybook-common/src/xybook_common/clients/: community_client.py
services/xybook-common/src/xybook_common/db/: base.py  session.py
services/xybook-common/tests/: test_config.py  test_db.py  test_enums.py  test_exceptions.py  test_llm.py  test_persona.py
services/xybook-community/: Dockerfile  alembic.ini  pyproject.toml
services/xybook-community/alembic/: env.py
services/xybook-community/alembic/versions/: 3d6e61f147d0_initial.py  57f709bce3e9_make_root_post_id_nullable.py
services/xybook-community/src/xybook_community/: config.py  dependencies.py  main.py
services/xybook-community/src/xybook_community/api/: feed.py  interactions.py  notifications.py  posts.py  read_states.py  router.py  search.py  threads.py  topics.py  users.py
services/xybook-community/src/xybook_community/models/: __init__.py  follow.py  notification.py  post.py  read_state.py  user.py
services/xybook-community/src/xybook_community/schemas/: follow.py  interaction.py  notification.py  post.py  read_state.py  user.py
services/xybook-community/tests/: test_app.py  test_models.py
services/xybook-experiments/: Dockerfile  pyproject.toml
services/xybook-experiments/src/xybook_experiments/: config.py  main.py
services/xybook-experiments/src/xybook_experiments/api/: router.py
services/xybook-experiments/tests/: test_app.py
services/xybook-gateway/: Dockerfile  pyproject.toml
services/xybook-gateway/src/xybook_gateway/: config.py  main.py
services/xybook-gateway/src/xybook_gateway/api/: router.py
services/xybook-gateway/src/xybook_gateway/middleware/: auth.py
services/xybook-gateway/tests/: test_app.py  test_auth.py
services/xybook-pipeline/: Dockerfile  alembic.ini  pyproject.toml
services/xybook-pipeline/alembic/: env.py
services/xybook-pipeline/alembic/versions/: f1602fee3906_initial.py
services/xybook-pipeline/src/xybook_pipeline/: config.py  dependencies.py  main.py
services/xybook-pipeline/src/xybook_pipeline/api/: events.py  router.py
services/xybook-pipeline/src/xybook_pipeline/models/: __init__.py  event.py  (+1 more)
services/xybook-pipeline/tests/: test_app.py  test_event_renderer.py  test_models.py
(+31 files in other folders)
