[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xybook-agents"
version = "0.1.0"
description = "XY-Book Agent Workers"
requires-python = ">=3.11"
dependencies = [
    "xybook-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "alembic>=1.13",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis[lua]>=2.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xybook_agents"]

[tool.pytest.ini_options]
