[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xybook-common"
version = "0.1.0"
description = "XY-Book shared library"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0",
    "minio>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xybook_common"]
