[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xybook-community"
version = "0.1.0"
description = "XY-Book Community Service"
requires-python = ">=3.11"
dependencies = [
    "xybook-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "alembic>=1.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xybook_community"]

[tool.pytest.ini_options]
