[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xybook-gateway"
version = "0.1.0"
description = "XY-Book API Gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/xybook_gateway"]

[tool.pytest.ini_options]
